<resources>
    <string name="app_name">ViaCepExample</string>
    <string name="default_error">Ocorreu algum problema!</string>
    <string name="load_error">Erro ao carregar contato</string>
    <string name="load_empty">Sem contatos a listar</string>
    <string name="insert_error">Erro ao inserrir contato</string>
    <string name="delete_error">Erro ao apagar contato</string>
    <string name="delete_success">Contato apagado com sucesso</string>
    <string name="contact_name_ph">Contact name</string>
    <string name="name_ph">Name</string>
    <string name="email_ph">E-mail</string>
    <string name="phone_ph">Phone</string>
    <string name="ok">OK</string>
    <string name="field_required">Este campo é obrigatório</string>
    <string name="contact_insert_success">Contato inserido com sucesso</string>
    <string name="cep_ph">CEP</string>
    <string name="streetNumber_ph">Número</string>
    <string name="complement_ph">Complemento (opcional)</string>
    <string name="streetName_ph">Rua/Avenida</string>
    <string name="city_ph">Cidade</string>
    <string name="uf_ph">UF</string>
    <string name="cancel">Voltar</string>
    <string name="contact_options">Opções</string>
    <string name="edit">Editar</string>
    <string name="delete">Apagar</string>
    <string name="contact_update_success">Contato atualizado com sucesso</string>
    <string name="contact_update_error">Erro ao atualizar contato</string>
</resources>