<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".module.contact.view.ContactBottomSheet">

        <TextView
            android:id="@+id/action_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_action_ph"
            android:gravity="center"
            android:padding="30dp"
            android:textColor="@color/black"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contact_name_textInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/contact_name_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_ph"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contact_email_textInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/contact_email_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_ph"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contact_phone_textInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/contact_phone_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_ph"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/white"
            android:text="@string/ok"
            android:textColor="@color/black"/>
    </LinearLayout>
</layout>